maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:21: error: expected class or object definition
	def random3():Int = {
        ^RandomMouseMaze:28: error: Unmatched closing brace '}' ignored here
}
^