maze.randommouse.RandomMouseMaze.scala.code
override def run() {
  while (estSurBiscuit()==false){
    if(estFaceMur()){
      droite()
    }
    else{
      avance();droite()
      if (estFaceMur()){
        gauche()
        
        }
      }
  	}
  }
  prendBiscuit()
    // Your code here 
}